<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".InfoActivity">

    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:background="@drawable/gradientbackground"
            android:padding="30dp"
            android:paddingBottom="10dp"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="150dp"
                android:layout_height="100dp"
                android:paddingTop="10dp"
                android:src="@drawable/pp"/>

            <TextView
                android:id="@+id/login_title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="INFORMATIKA"
                android:textColor="#fff"
                android:textSize="26sp"
                android:textStyle="bold"
                android:layout_alignParentTop="true"/>
        </LinearLayout>

            <LinearLayout
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:gravity="center"
            android:background="@drawable/kartu">
            <TextView
                android:layout_width="wrap_content"
                android:text="VISI"
                android:textColor="#ffffff"
                android:layout_height="wrap_content" />
        </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/visi"
                    android:layout_height="wrap_content"
                    android:textSize="10pt"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:textAlignment="center"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@drawable/kartu">
                <TextView
                    android:layout_width="wrap_content"
                    android:text="Misi"
                    android:textColor="#ffffff"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                android:layout_width="wrap_content"
                android:text="@string/misi1"
                android:layout_height="wrap_content"
                android:textSize="10pt"
                android:textColor="#000000"
                android:padding="10dp"
                android:textAlignment="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/misi2"
                    android:layout_height="wrap_content"
                    android:textSize="10pt"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/misi3"
                    android:layout_height="wrap_content"
                    android:textSize="10pt"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/misi4"
                    android:layout_height="wrap_content"
                    android:textSize="10pt"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:textAlignment="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/misi5"
                    android:layout_height="wrap_content"
                    android:textSize="10pt"
                    android:textColor="#000000"
                    android:padding="10dp"
                    android:textAlignment="center"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>